# yoora-sarah

./: .env.example  .gitignore  .prettierignore  .vercel-inspect-api.txt  BLUEPRINT.md  CONTRIBUTING.md  README.md  TIMELINE.md  final-local-home-desktop.yml  fontshare-home.md  hero-topbar-minimal-desktop.yml  hero-topbar-minimal-mobile.yml  local-category-deep.yml  local-category-desktop.yml  local-category-mobile.yml  local-home-desktop.yml  local-home-mobile.yml  local-product-deep.yml  local-product-mobile.yml  navbar-curated-desktop-final.yml  package-lock.json  package.json  payload.json  playwright-header-dropdown-snapshot.md  playwright-home-1024-after.yml  playwright-home-1024.yml  playwright-home-390-after.yml  playwright-home-390-final.yml  playwright-home-390.yml  playwright-home-navbar-v3.md  playwright-home-snapshot.md  playwright.config.ts  portal-login-390.md  portal-login-postfix-390.md  premium-login-page-v1.md  reference-yoora-category.md  reference-yoora-home.md  render.yaml  turbo.json
.github/: CODEOWNERS  (+1 more)
services/api/: Dockerfile  pyproject.toml  requirements.txt  vercel.json
services/api/app/core/: config.py  postgres.py
services/api/app/schemas/: audit.py  brief.py  catalog.py  commerce.py  forecast.py  pattern.py
services/api/app/services/: ai_stylist_service.py  ai_tools_service.py  catalog_store.py  commerce_store.py  design_workflow_store.py  forecast_workflow_store.py  pattern_workflow_store.py  postgres_store.py  storefront_postgres_store.py
services/api/tests/: test_ai_assistant_response.py  test_ai_stylist_service.py  test_auth.py
(+664 files in other folders)
